--- a/Westeros2/Base.lproj/Main.storyboard
+++ b/Westeros2/Base.lproj/Main.storyboard
@@ -34,12 +34,13 @@
                     <navigationItem key="navigationItem" id="82W-nb-qxM">
                         <barButtonItem key="rightBarButtonItem" title="House" id="eE6-ji-stU">
                             <connections>
-                                <segue destination="seQ-Gp-mie" kind="presentation" id="7cr-dm-C6r"/>
+                                <segue destination="seQ-Gp-mie" kind="presentation" identifier="ksecondViewControllerSegue" id="7cr-dm-C6r"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="CharacterLabel" destination="8YK-rU-34V" id="rhw-3H-DbW"/>
+                        <outlet property="characterLabel" destination="IqE-ux-pln" id="Gqb-pz-6o8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -69,6 +70,9 @@
                                         <rect key="frame" x="190.66666666666663" y="0.0" width="178.33333333333337" height="34.333333333333336"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                        <connections>
+                                            <action selector="didTapStarkButton:" destination="seQ-Gp-mie" eventType="touchUpInside" id="lbz-KW-CPh"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
